Adding JavaScript file and some updates

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -3,6 +3,12 @@ body {
   background-color: linen;
 }
 
+label {
+  cursor: default;
+}
+
+input {margin:5px;}
+
 /* Manadatory fields */
 .required:after {
     content: " *";
